# SoftnixPrivateClaw_v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml
.claude/: launch.json
browser-extension/: background.js  content_script.js  manifest.json  popup.html  popup.js
claw/: __init__.py  config.py  i18n.py  main.py
claw/api/: admin.py  auth.py  branding_shared.py  browser_ext.py  connector_oauth.py  deps.py  knowledge.py  llm_shared.py  manage.py  routes.py  telegram.py
claw/auth/: __init__.py  activation.py  connector_oauth.py  oidc.py  password_reset.py  passwords.py  (+1 more)
docker/: sandbox.Dockerfile
migrations/: env.py
scripts/: claw  claw-serve.sh
tests/: conftest.py  conftest_app.py  test_activation.py  test_admin.py  test_agent_tools.py  test_attachments.py  test_auth.py  test_branding.py  test_browser.py  test_browser_extension.py  test_bus.py  test_config.py  test_config_api.py  test_connector_presets.py  test_connectors_manager.py  test_context.py  test_crypto.py  test_feedback.py  test_google_sheets_mcp_server.py  test_heartbeat.py  test_i18n.py  test_image_gen.py  test_knowledge.py  test_limits.py  test_loop.py  test_manage.py  test_oidc.py  test_password_reset.py  test_policy.py  test_policy_plans.py  test_rbac.py  test_recall_memory.py  test_runtime.py  test_scheduler.py  test_scripts_claw.sh  test_skills.py  test_softnix_one_url.py  test_stores.py  test_subagent.py  test_telegram.py  (+7 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+106 files in other folders)
