[project]
name = "claw"
version = "0.1.0"
description = "Claw Agent v2 — streaming-first, multi-tenant personal AI agent platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.60",
    "json-repair>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "loguru>=0.7",
    "httpx>=0.27",
    "cryptography>=43.0",
    "mcp>=1.2",
    "croniter>=3.0",
    "alembic>=1.18.5",
    "python-multipart>=0.0.32",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.48"]
documents = ["openpyxl>=3.1", "pypdf>=5.0", "python-docx>=1.1"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["softnix-agenticclaw"]
